fix: resolved photo distortion on about page

--- a/styles/components/OfficerCard.module.scss
+++ b/styles/components/OfficerCard.module.scss
@@ -84,6 +84,7 @@
   height: 70px;
   margin: 25px 10px 0;
   width: 70px;
+  object-fit: cover;
 }
 
 .officer-info {
